--- a/index.html
+++ b/index.html
@@ -7,6 +7,52 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1>CSS</h1>
+    <!-- minipage 1 section#mp1>header>nav>ul>(li>a[href="x"]{link $})*6+main+aside+footer-->
+    <section id="mp1">
+        <header>
+            <h1>Minipage 1</h1>
+            <nav>
+                <ul>
+                    <li><a href="x">link 1</a></li>
+                    <li><a href="x">link 2</a></li>
+                    <li><a href="x">link 3</a></li>
+                    <li><a href="x">link 4</a></li>
+                    <li><a href="x">link 5</a></li>
+                    <li><a href="x">link 6</a></li>
+                    <main>
+                        <h2>main</h2>
+                        <article>
+                            <h3>titulo articulo</h3>
+                            <footer>pie del articulo</footer>
+                        </article>
+                        <article>
+                            <h2> Titulo H2 </h2>
+                        </article>
+                    </main>
+                    <aside><h2>aside</h2></aside>
+                    <footer><h2>footer</h2></footer>
+                </ul>
+            </nav>
+        </header>
+    </section>
+
+    <header>
+        <h1 type="hola" class="verde">CSS</h1>
+        <nav>
+            <ul>
+                <li class="rojo"><a href="https://youtube.com">link1</a></li>
+                <li class="rojo"><a href="https://miyoutube.com">link2</a></li>
+                <li class="verde"><a href="https://empresa.com.mx">link3</a></li>
+                <li class="amarillo"><a href="#info">link4</a></li>
+                <li class="naranja"><a href="#clientes">link5</a></li>
+                <li class="morado"><a href="#">link6</a></li>
+                <p lang="en">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Eveniet unde, esse illo exercitationem autem aliquam fuga animi vero impedit mollitia ipsam hic 
+                repellat nisi ea explicabo vel cum eos quo.</p>
+                <P lang="en">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod cupiditate possimus, 
+                obcaecati beatae veniam doloremque atque consequuntur laborum reiciendis ipsam aliquam fugit illo nobis minima! Ratione vitae totam nam dolorem!</P>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
